# bevy_pmetra

./: .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  IDEAS.md  JUSTFILE  README.md  WORKERS-RS.md  index.html  pmetra-manifest.json  wrangler.toml
crates/pmetra_internal/src/pmetra_core/tessellation/: triangulation.rs
crates/pmetra_internal/src/pmetra_plugins/: plugins.rs
crates/pmetra_internal/src/pmetra_plugins/systems/cad/: model.rs
mcp-server/: README.md  index.ts  package.json  schemas.ts  test.ts
mcp-server-rs/: Cargo.toml
mcp-server-rs/src/: main.rs
mcp-server/bindings/: CadGeneratedModelParamsId.ts  CadGeneratedModelSpawner.ts
pmetra_demo/: Cargo.toml
pmetra_demo/assets/shapes/: bottle.json  cylinder.json  punched-cube-shapeops.json  punched-cube.json  sphere.json  torus-punched-cube.json
pmetra_demo/assets/step/: occt-assy.step
pmetra_demo/src/: lib.rs  plugin.rs  resources.rs  truck_loader.rs  wasm_bridge.rs
pmetra_demo/src/plugins/: my_bevy_defaults.rs
pmetra_demo/src/plugins/gltf_exporter/: plugin.rs
pmetra_demo/src/plugins/gltf_exporter/gltf/: mod.rs
pmetra_demo/src/systems/: orbit_cam.rs
pmetra_demo/src/utils/cad_models/reference/: basic_shape_ops.rs
pmetra_demo/src/utils/cad_models/simple_primitives/exp_nurbs/: mod.rs  nurbs_surface.rs
pmetra_demo/src/utils/cad_models/simple_primitives/simple_cube_at_cylinder/: mod.rs
pmetra_demo/src/utils/cad_models/space_station/: round_rect_cuboid.rs
pmetra_demo/src/utils/cad_models/space_station/round_cabin_segment/: mod.rs
pmetra_demo/src/utils/cad_models/space_station/tower_extension/: mod.rs
web/: styles.css
workers/: static-site.js  worker.js
